# OOP-Homework-4

./: CMakeLists.txt  Dockerfile  README.md  Координаты_для_теста.txt  ЛабораторнаяРабота4.txt
include/: Array.h  Figure.h  Octagon.h  Point.h  Square.h  Triangle.h
src/: main.cpp
tests/: test_array.cpp  test_figures.cpp
